# jewel-coupon-clipper

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  handler.py  main.py  pyproject.toml  utils.py
.github/workflows/: bump-version.yml  docker-publish.yml
models/: jewel.py  metrics.py
services/: jewel_service.py  metrics_service.py  notifier_service.py
