[project]
name = "jewel-coupon-clipper"
version = "0.1.0"
description = "Automated coupon clipper for Jewel-Osco"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.ruff]
line-length = 120
