[project]
name = "jewel-coupon-clipper"
version = "1.0.0"
description = "Automated coupon clipper for Jewel-Osco and other Albertsons-family banners"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apprise>=1.12.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.ruff]
line-length = 120
